--- a/tracker/templates/index.html
+++ b/tracker/templates/index.html
@@ -2,6 +2,12 @@
 {% block start %}
 
     <h1>Expense Tracker</h1>
+    <a  class="btn" style="background-color: brown;width: 80px;" href="{% url 'logout-view' %}" >Logout</a>
+
+
+    {{request.user}}
+    {{request.user.first_name}}
+    {{request.user.last_name}}
 
     <div class="container">
         <div class="header">
